--- a/srcs/.env
+++ b/srcs/.env
@@ -21,4 +21,4 @@ SQL_DATABASE=inception
 SQL_ROOT_PASSWORD=inception
 
 #-----------------------NGNIX-------------------------#
-DOMAIN_NAME=lcompieg.42.fr
+DOMAIN_NAME=avaganay.42.fr
