--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/ssl/private/nginx-selfsigned.key \
     -out /etc/ssl/certs/nginx-selfsigned.crt \
-    -subj "/C=FR/ST=RHONE/L=LYON/O=42 lyon/OU=42/CN=lcompieg.42.fr/UID=lcompieg"
+    -subj "/C=FR/ST=RHONE/L=LYON/O=42 lyon/OU=42/CN=avaganay.42.fr/UID=avaganay"
 
 COPY ./conf/nginx.conf /etc/nginx/sites-available/default
 
