--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,7 +8,7 @@ server {
 	ssl_certificate	/etc/ssl/certs/nginx-selfsigned.crt;
 	ssl_certificate_key	/etc/ssl/private/nginx-selfsigned.key;
 
-    server_name lcompieg.42.fr;
+    server_name avaganay.42.fr;
 
 	#root and index
 	root /var/www/html;
