--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,46 +1,25 @@
+# derniere version de docker-compose
 version: '3'
 
-networks:
-    inception:
-        name: inception
-        driver: bridge
-  
-volumes:
-
-  mariadb_data:
-    driver: local
-    driver_opts:
-      device: /home/avaganay/data/mariadb
-      type: 'none'
-      o: 'bind'
-
-  wordpress_data:
-    driver: local
-    driver_opts:
-      device: /home/avaganay/data/wordpress
-      type: 'none'
-      o: 'bind'
-
 services:
-
     mariadb:
-      build: requirements/mariadb
-      env_file: 
-        - .env 
+      build:
+        context: requirements/mariadb # ou se trouve son Dockerfile
+      env_file: .env 
       restart: always
       container_name: mariadb
       image: mariadb:42
       volumes:
         - mariadb_data:/var/lib/mysql
+      networks:
+        - inception # à quel network il appartient
       ports:
         - "3306"
-      networks:
-        - inception
 
     wordpress:
-      build: requirements/wordpress
-      env_file: 
-        - .env 
+      build:
+        context: requirements/wordpress
+      env_file: .env 
       container_name: wordpress
       restart: always
       image: wordpress:42
@@ -48,23 +27,42 @@ services:
         - mariadb
       volumes:
         - wordpress_data:/var/www/html
-      ports:
-        - "9000"
       networks:
         - inception
+      ports:
+        - "9000"
 
     nginx:
-      build: requirements/nginx
-      env_file: 
-        - .env 
+      build:
+        context: requirements/nginx
+      env_file: .env 
       restart: always
       container_name: nginx
       image: nginx:42
       depends_on:
         - wordpress
-      ports:
-        - "443:443"
       volumes:
         - wordpress_data:/var/www/html
       networks:
         - inception
+      ports:
+        - "443:443"
+
+networks:
+    inception:
+        driver: bridge # le type de commucation entre les 3 containers
+        name: inception
+
+volumes:
+  mariadb_data:
+    driver: local # ici nous stockons le volume en local
+    driver_opts:
+      type: 'none'
+      o: 'bind' # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
+      device: /home/avaganay/data/mariadb #Ou stocker le dossier sur votre ordinateur en local
+  wordpress_data:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: /home/avaganay/data/wordpress
