axel change mariadb.cnf

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,6 @@
-server {
-	#SSL configuration
+server
+{
+
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
@@ -8,17 +9,21 @@ server {
 	ssl_certificate	/etc/ssl/certs/nginx-selfsigned.crt;
 	ssl_certificate_key	/etc/ssl/private/nginx-selfsigned.key;
 
+	#indique que la connection sera fait depuis cet host
     server_name avaganay.42.fr;
 
-	#root and index
+	# Définit le répertoire racine pour les fichiers du site web, le dossier ou ils sont stockés
 	root /var/www/html;
+	# Fichiers a afficher
 	index index.php index.html;
 	
-    location / {
+    location /
+	{
 		try_files $uri $uri/ =404;
 	}
 
-	location ~ \.php$ {
+	location ~ \.php$
+	{
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
 	}
