--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,11 +17,13 @@ server
 	# Fichiers a afficher
 	index index.php index.html;
 	
+	# / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
     location /
 	{
 		try_files $uri $uri/ =404;
 	}
 
+	 # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
 	location ~ \.php$
 	{
 		include snippets/fastcgi-php.conf;
