axel change mariadb.cnf

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -26,7 +26,9 @@ server
 	 # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
 	location ~ \.php$
 	{
+		# include le fichier qui contient des directives FastCGI spécifiques pour le traitement des scripts PHP
 		include snippets/fastcgi-php.conf;
+		# comment renvoyer les requetes pho
 		fastcgi_pass wordpress:9000;
 	}
 }
