--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,11 +5,15 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/
 
+# installer le CLI qui configure automatiquement wordpress
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
 	&& chmod +x wp-cli.phar \
 	&& mv wp-cli.phar /usr/local/bin/wp
 
+# toutes les commandes qui suivent seront executees dans ce repo
 WORKDIR /var/www/html/
+# ce repo peut être utilisé pour stocker des fichiers temporaires ou des sockets liés à PHP
+# -p permet de creer le chemin complet y compris les repertoires parents
 RUN mkdir -p /run/php
 
 EXPOSE 9000
